--- a/docs/chapter08_intro_to_dl_for_computer_vision_i.ipynb
+++ b/docs/chapter08_intro_to_dl_for_computer_vision_i.ipynb
@@ -13,14 +13,14 @@
         "id": "8fLCc3qLlC2u"
       },
       "source": [
-        "*This is a companion notebook for the excellent book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff).* \n",
+        "*This tutorial is mainly based on the excellent book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff) by François Chollet as well as content from the [ML Practica](https://developers.google.com/machine-learning/practica) provided by Google Developers. \n",
         "\n",
-        "The fundamental difference between a densely connected layer and a convolution\n",
-        "layer is this: Dense layers learn global patterns in their input feature space (for example, for a MNIST digit, patterns involving all pixels), whereas convolution layers learn local patterns—in the case of images, patterns found in small 2D windows of the\n",
-        "inputs.\n",
+        "The problem we’re trying to solve here is to classify the grayscale images of handwritten digits (28x28 pixels) into their 10 categories (0 through 9) using a convolutional neural network instead of a densly connected neural network.\n",
         "\n",
-        "The following code shows what a basic convnet looks like. It’s a stack of Conv2D\n",
-        "and MaxPooling2D layers. We’ll build the model using the Functional API."
+        "Let's first address the difference between a densely connected layer and a convolution layer:\n",
+        "\n",
+        "- Dense layers learn global patterns in their input feature space (for example, for a MNIST digit, patterns involving all pixels)\n",
+        "- convolution layers learn local patterns—in the case of images, patterns found in small 2D windows of the inputs."
       ]
     },
     {
@@ -42,7 +42,7 @@
         "\n",
         "Image source: [Wikipedia, Josef Steppan](https://upload.wikimedia.org/wikipedia/commons/2/27/MnistExamples.png)\n",
         "\n",
-        "The problem we’re trying to solve here is to classify the grayscale images of handwritten digits (28x28 pixels) into their 10 categories (0 through 9). MNIST contains a set of 60,000 training images, plus 10,000 test images."
+        "MNIST contains a set of 60,000 training images, plus 10,000 test images."
       ]
     },
     {
@@ -75,7 +75,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Our training images are stored in an array of shape (60000, 28, 28) of type uint8 with values in the [0, 255] interval:\n"
+        "Our training images are stored in an array:\n",
+        "\n",
+        "- of shape (60000, 28, 28) \n",
+        "- of type uint8 \n",
+        "- with values in the [0, 255] interval"
       ]
     },
     {
@@ -95,110 +99,8 @@
         }
       ],
       "source": [
+        "# take a look at the shape\n",
         "train_images.shape"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array([[[  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           3,  18,  18,  18, 126, 136, 175,  26, 166, 255, 247, 127,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,  30,  36,  94, 154,\n",
-              "         170, 253, 253, 253, 253, 253, 225, 172, 253, 242, 195,  64,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,  49, 238, 253, 253, 253,\n",
-              "         253, 253, 253, 253, 253, 251,  93,  82,  82,  56,  39,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,  18, 219, 253, 253, 253,\n",
-              "         253, 253, 198, 182, 247, 241,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,  80, 156, 107, 253,\n",
-              "         253, 205,  11,   0,  43, 154,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,  14,   1, 154,\n",
-              "         253,  90,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0, 139,\n",
-              "         253, 190,   2,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  11,\n",
-              "         190, 253,  70,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "          35, 241, 225, 160, 108,   1,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,  81, 240, 253, 253, 119,  25,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,  45, 186, 253, 253, 150,  27,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,  16,  93, 252, 253, 187,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0,   0, 249, 253, 249,  64,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,  46, 130, 183, 253, 253, 207,   2,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "          39, 148, 229, 253, 253, 253, 250, 182,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  24, 114,\n",
-              "         221, 253, 253, 253, 253, 201,  78,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,  23,  66, 213, 253,\n",
-              "         253, 253, 253, 198,  81,   2,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,  18, 171, 219, 253, 253, 253,\n",
-              "         253, 195,  80,   9,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,  55, 172, 226, 253, 253, 253, 253, 244,\n",
-              "         133,  11,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0, 136, 253, 253, 253, 212, 135, 132,  16,\n",
-              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0],\n",
-              "        [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "           0,   0,   0,   0]]], dtype=uint8)"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "train_images[0:1]"
       ]
     },
     {
@@ -261,7 +163,7 @@
       "source": [
         "Before training, we’ll preprocess the data:\n",
         "\n",
-        "1. `reshape()`: we reshape our training data to format (60000, 28, 28, 1); test data to (10000, 28, 28, 1). \n",
+        "1. `reshape()`: we reshape our training data to format (60000, 28, 28, 1); test data to (10000, 28, 28, 1). The input is samples, height, width and depth (color channel). For a black-and-white picture, like the MNIST digits, the depth is 1 (levels of gray from value 0 to 255).\n",
         "\n",
         "1. `astype()`: we transform the data into float32\n",
         "\n",
@@ -277,12 +179,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Training data\n",
         "train_images = train_images.reshape((60000, 28, 28, 1))\n",
-        "\n",
         "train_images = train_images.astype(\"float32\") / 255\n",
         "\n",
+        "# Test data\n",
         "test_images = test_images.reshape((10000, 28, 28, 1))\n",
-        "\n",
         "test_images = test_images.astype(\"float32\") / 255"
       ]
     },
@@ -306,30 +208,74 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Convolutions operate over rank-3 tensors called feature maps, with two spatial axes\n",
-        "(height and width) as well as a depth axis (also called the channels axis). For an RGB\n",
-        "image, the dimension of the depth axis is 3, because the image has three color channels: red, green, and blue. For a black-and-white picture, like the MNIST digits, the depth is 1 (levels of gray).\n",
+        "### Feature maps and filters\n",
         "\n",
-        "The convolution operation extracts patches from its input feature map and applies the same transformation to all of these patches, producing an output feature map. This output feature map is still a rank-3 tensor: it has a width and a height. Its depth can be arbitrary, because the output depth is a parameter of the layer, and the different channels in that depth axis no longer stand for specific colors\n",
+        "A convolution extracts tiles of the input feature map, and applies filters to them to compute new features, producing an output feature map, or convolved feature (which may have a different size and depth than the input feature map). Convolutions are defined by two parameters ([Google Developers](https://developers.google.com/machine-learning/practica/image-classification/convolutional-neural-networks)):\n",
+        "\n",
+        "- Size of the tiles that are extracted (typically 3x3 or 5x5 pixels).\n",
+        "- The depth of the output feature map, which corresponds to the number of filters that are applied.\n",
+        "\n",
+        "During a convolution, the filters (matrices the same size as the tile size) effectively slide over the input feature map's grid horizontally and vertically, one pixel at a time, extracting each corresponding tile:\n",
+        "\n",
+        "![](https://developers.google.com/machine-learning/practica/image-classification/images/convolution_overview.gif)\n",
+        "\n",
+        "*Figure source: Google Developers*\n",
+        "\n",
+        "The figure shows a 3x3 convolution of depth 1 performed over a 5x5 input feature map, also of depth 1. There are nine possible 3x3 locations to extract tiles from the 5x5 feature map, so this convolution produces a 3x3 output feature map.\n",
+        "\n",
+        "Convolutions operate over rank-3 tensors called **feature maps**, with two spatial axes\n",
+        "(height and width) as well as a depth axis (also called the channels axis):\n",
+        "\n",
+        "- feature map = (height, width, depth) *depth stands for color input*\n",
+        "\n",
+        "For an RGB image, the dimension of the depth axis is 3, because the image has three color channels: red, green, and blue. For a black-and-white picture, like the MNIST digits, the depth is 1 (levels of gray).\n",
+        "\n",
+        "The convolution operation extracts patches from its input feature map and applies the same transformation to all of these patches, producing an **output feature map**. \n",
+        "\n",
+        "- output feature map = (height, width, depth) *depth stands for filter* \n",
+        "\n",
+        "This output feature map is still a rank-3 tensor: it has a width and a height. Its depth can be arbitrary, because the output depth is a *parameter of the layer*, and the different channels in that depth axis no longer stand for specific colors\n",
         "as in RGB input; rather, they stand for filters. \n",
         "\n",
-        "Filters encode specific aspects of the input data: at a high level, a single filter could encode the concept “presence of a face in the input,” for instance.\n",
+        "**Filters** encode specific aspects of the input data: at a high level, a single filter could encode the concept “presence of a face in the input,” for instance.\n",
         "\n",
-        "In the MNIST example, the first convolution layer takes a feature map of size (28,\n",
-        "28, 1) and outputs a feature map of size (26, 26, 32): it computes 32 filters over its\n",
-        "input. Each of these 32 output channels contains a 26   26 grid of values, which is a\n",
-        "response map of the filter over the input, indicating the response of that filter pattern at\n",
-        "different locations in the input (see figure 8.3)."
+        "### Pooling\n",
+        "\n",
+        "Pooling downsamples the convolved feature (to save on processing time), reducing the number of dimensions of the feature map, while still preserving the most critical feature information. A common algorithm used for this process is called max pooling.\n",
+        "\n",
+        "Max pooling operates in a similar fashion to convolution. We slide over the feature map and extract tiles of a specified size. For each tile, the maximum value is output to a new feature map, and all other values are discarded. Max pooling operations take two parameters:\n",
+        "\n",
+        "- Size of the max-pooling filter (typically 2x2 pixels)\n",
+        "- Stride: the distance, in pixels, separating each extracted tile. Unlike with convolution, where filters slide over the feature map pixel by pixel, in max pooling, the stride determines the locations where each tile is extracted. For a 2x2 filter, a stride of 2 specifies that the max pooling operation will extract all nonoverlapping 2x2 tiles from the feature map:\n",
+        "\n",
+        "![](https://developers.google.com/machine-learning/practica/image-classification/images/maxpool_animation.gif)\n",
+        "\n",
+        "Figure: Left: Max pooling performed over a 4x4 feature map with a 2x2 filter and stride of 2. Right: the output of the max pooling operation. Note the resulting feature map is now 2x2, preserving only the maximum values fro\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- `Input`: A convnet takes as input tensors of shape (image_height, image_width,\n",
+        "- `Input`: the convnet takes as input tensors of shape (image_height, image_width,\n",
         "image_channels), not including the batch dimension. In our case, we’ll configure the\n",
         "convnet to process inputs of size (28, 28, 1), which is the format of MNIST images. \n",
-        "\n"
+        "\n",
+        "- [`Conv2D`](https://keras.io/api/layers/convolution_layers/convolution2d/): the first convolution layer takes an input feature map of size (28,\n",
+        "28, 1) and computes 32 filters over its input. \n",
+        "    - `kernel_size`: An integer or tuple/list of 2 integers, specifying the height and width of the 2D convolution window. Can be a single integer to specify the same value for all spatial dimensions. Convolution is typically done with 3x3 windows and no stride (stride 1).\n",
+        "    - `activation`: Following each convolution operation, the CNN applies a Rectified Linear Unit (ReLU) transformation to the convolved feature, in order to introduce nonlinearity into the model. The ReLU function, F(x) = max(0, x), returns x for all values of x > 0, and returns 0 for all values of x ≤ 0.\n",
+        "\n",
+        "\n",
+        "\n",
+        "- [MaxPooling2D`]: consists of extracting windows from the input feature maps and\n",
+        "outputting the max value of each channel. Max pooling is usually done\n",
+        "with 2x2 windows and stride 2, in order to downsample the feature maps by a factor\n",
+        "of 2. \n",
+        "\n",
+        "and outputs a feature map of size (26, 26, 32): it computes 32 filters over its\n",
+        "input. Each of these 32 output channels contains a 26 x 26 grid of values, which is a\n",
+        "response map of the filter over the input, indicating the response of that filter pattern at different locations in the input."
       ]
     },
     {
