--- a/docs/chapter08_intro_to_dl_for_computer_vision_i.ipynb
+++ b/docs/chapter08_intro_to_dl_for_computer_vision_i.ipynb
@@ -15,12 +15,7 @@
       "source": [
         "*This tutorial is mainly based on the excellent book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff) by François Chollet as well as content from the [ML Practica](https://developers.google.com/machine-learning/practica) provided by Google Developers. \n",
         "\n",
-        "The problem we’re trying to solve here is to classify the grayscale images of handwritten digits (28x28 pixels) into their 10 categories (0 through 9) using a convolutional neural network instead of a densly connected neural network.\n",
-        "\n",
-        "Let's first address the difference between a densely connected layer and a convolution layer:\n",
-        "\n",
-        "- Dense layers learn global patterns in their input feature space (for example, for a MNIST digit, patterns involving all pixels)\n",
-        "- convolution layers learn local patterns—in the case of images, patterns found in small 2D windows of the inputs."
+        "The problem we’re trying to solve here is to classify the grayscale images of handwritten digits (28x28 pixels) into their 10 categories (0 through 9) using a convolutional neural network (CNN) instead of a densly connected neural network."
       ]
     },
     {
@@ -163,12 +158,11 @@
       "source": [
         "Before training, we’ll preprocess the data:\n",
         "\n",
-        "1. `reshape()`: we reshape our training data to format (60000, 28, 28, 1); test data to (10000, 28, 28, 1). The input is samples, height, width and depth (color channel). For a black-and-white picture, like the MNIST digits, the depth is 1 (levels of gray from value 0 to 255).\n",
+        "1. `reshape()`: we reshape our training and test data. The input is samples, height, width and depth (color channel). For a black-and-white picture, like the MNIST digits, the depth is 1 (levels of gray from value 0 to 255).\n",
         "\n",
         "1. `astype()`: we transform the data into float32\n",
         "\n",
         "1. We *scale* the data (devide by 255) so that all values are in the [0, 1] interval. \n",
-        "\n",
         "\n",
         "Hence, we’ll transform our data into a float32 array of shape (60000, 28, 28, 1) with values between 0 and 1."
       ]
@@ -201,7 +195,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The following code shows what a basic convnet looks like (we use the Functional API). In essence, it’s a stack of Conv2D and MaxPooling2D layers. "
+        "Let's first address the difference between a densely connected layer and a convolution layer:\n",
+        "\n",
+        "- Dense layers learn global patterns in their input feature space (for example, for a MNIST digit, patterns involving all pixels)\n",
+        "- convolution layers learn local patterns—in the case of images, patterns found in small 2D windows of the inputs.\n",
+        "\n",
+        "A convolutional neural network (CNN) can be used to progressively extract higher- and higher-level representations of the image content. Instead of preprocessing the data to derive features like textures and shapes, a CNN takes just the image's raw pixel data as input and \"learns\" how to extract these features, and ultimately infer what object they constitute (Google Developers)."
       ]
     },
     {
@@ -257,6 +256,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Code\n",
+        "\n",
+        "The following code shows what a basic convnet looks like (we use the Functional API). In essence, it’s a stack of Conv2D and MaxPooling2D layers. \n",
+        "\n",
         "- `Input`: the convnet takes as input tensors of shape (image_height, image_width,\n",
         "image_channels), not including the batch dimension. In our case, we’ll configure the\n",
         "convnet to process inputs of size (28, 28, 1), which is the format of MNIST images. \n",
