--- a/_sources/docs/mnist-pytorch.ipynb
+++ b/_sources/docs/mnist-pytorch.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# MNIST PyTorch"
+        "# MNIST with PyTorch"
       ]
     },
     {
