--- a/docs/chapter08_intro_to_dl_for_computer_vision_i.ipynb
+++ b/docs/chapter08_intro_to_dl_for_computer_vision_i.ipynb
@@ -15,7 +15,9 @@
       "source": [
         "*This tutorial is mainly based on the excellent book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff) by François Chollet as well as content from the [ML Practica](https://developers.google.com/machine-learning/practica) provided by Google Developers. \n",
         "\n",
-        "The problem we’re trying to solve here is to classify the grayscale images of handwritten digits (28x28 pixels) into their 10 categories (0 through 9) using a convolutional neural network (CNN) instead of a densly connected neural network."
+        "The problem we’re trying to solve here is to classify the grayscale images of handwritten digits (28x28 pixels) into their 10 categories (0 through 9) using a convolutional neural network (CNN).\n",
+        "\n",
+        "A convolutional neural network (CNN) can be used to progressively extract higher- and higher-level representations of the image content. Instead of preprocessing the data to derive features like textures and shapes, a CNN takes just the image's raw pixel data as input and \"learns\" how to extract these features, and ultimately infer what object they constitute (Google Developers)."
       ]
     },
     {
@@ -195,12 +197,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Let's first address the difference between a densely connected layer and a convolution layer:\n",
+        "Let's first address the difference between a densely connected layer and a convolution layer in Keras:\n",
         "\n",
         "- Dense layers learn global patterns in their input feature space (for example, for a MNIST digit, patterns involving all pixels)\n",
-        "- convolution layers learn local patterns—in the case of images, patterns found in small 2D windows of the inputs.\n",
         "\n",
-        "A convolutional neural network (CNN) can be used to progressively extract higher- and higher-level representations of the image content. Instead of preprocessing the data to derive features like textures and shapes, a CNN takes just the image's raw pixel data as input and \"learns\" how to extract these features, and ultimately infer what object they constitute (Google Developers)."
+        "- convolution layers learn local patterns—in the case of images, patterns found in small 2D windows of the inputs."
       ]
     },
     {
@@ -209,7 +210,9 @@
       "source": [
         "### Feature maps and filters\n",
         "\n",
-        "A convolution extracts tiles of the input feature map, and applies filters to them to compute new features, producing an output feature map, or convolved feature (which may have a different size and depth than the input feature map). Convolutions are defined by two parameters ([Google Developers](https://developers.google.com/machine-learning/practica/image-classification/convolutional-neural-networks)):\n",
+        "A convolution extracts tiles of the input feature map, and applies filters to them to compute new features, producing an output feature map, or convolved feature (which may have a different size and depth than the input feature map). \n",
+        "\n",
+        "Convolutions are defined by two parameters ([Google Developers](https://developers.google.com/machine-learning/practica/image-classification/convolutional-neural-networks)):\n",
         "\n",
         "- Size of the tiles that are extracted (typically 3x3 or 5x5 pixels).\n",
         "- The depth of the output feature map, which corresponds to the number of filters that are applied.\n",
@@ -222,8 +225,7 @@
         "\n",
         "The figure shows a 3x3 convolution of depth 1 performed over a 5x5 input feature map, also of depth 1. There are nine possible 3x3 locations to extract tiles from the 5x5 feature map, so this convolution produces a 3x3 output feature map.\n",
         "\n",
-        "Convolutions operate over rank-3 tensors called **feature maps**, with two spatial axes\n",
-        "(height and width) as well as a depth axis (also called the channels axis):\n",
+        "In summary, convolutions operate over rank-3 tensors called **feature maps**, with two spatial axes (height and width) as well as a depth axis (also called the channels axis):\n",
         "\n",
         "- feature map = (height, width, depth) *depth stands for color input*\n",
         "\n",
@@ -233,8 +235,7 @@
         "\n",
         "- output feature map = (height, width, depth) *depth stands for filter* \n",
         "\n",
-        "This output feature map is still a rank-3 tensor: it has a width and a height. Its depth can be arbitrary, because the output depth is a *parameter of the layer*, and the different channels in that depth axis no longer stand for specific colors\n",
-        "as in RGB input; rather, they stand for filters. \n",
+        "This output feature map is still a rank-3 tensor: it has a width and a height. Its depth can be arbitrary, because the output depth is a *parameter of the layer*, and the different channels in that depth axis no longer stand for specific colors as in RGB input; rather, they stand for filters. \n",
         "\n",
         "**Filters** encode specific aspects of the input data: at a high level, a single filter could encode the concept “presence of a face in the input,” for instance.\n",
         "\n",
@@ -248,6 +249,9 @@
         "- Stride: the distance, in pixels, separating each extracted tile. Unlike with convolution, where filters slide over the feature map pixel by pixel, in max pooling, the stride determines the locations where each tile is extracted. For a 2x2 filter, a stride of 2 specifies that the max pooling operation will extract all nonoverlapping 2x2 tiles from the feature map:\n",
         "\n",
         "![](https://developers.google.com/machine-learning/practica/image-classification/images/maxpool_animation.gif)\n",
+        "\n",
+        "*Figure source: Google Developers*\n",
+        "\n",
         "\n",
         "Figure: Left: Max pooling performed over a 4x4 feature map with a 2x2 filter and stride of 2. Right: the output of the max pooling operation. Note the resulting feature map is now 2x2, preserving only the maximum values fro\n"
       ]
