--- a/docs/structured_data_classification_from_scratch.ipynb
+++ b/docs/structured_data_classification_from_scratch.ipynb
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 1,
       "metadata": {
         "id": "aubhVbfWb_vk"
       },
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 2,
       "metadata": {
         "id": "EId7MS20b_vm"
       },
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "metadata": {
         "id": "pORrkaefb_vn"
       },
@@ -118,7 +118,7 @@
               "(303, 14)"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "metadata": {
         "id": "zW3GlXdWb_vo"
       },
@@ -296,7 +296,7 @@
               "4   0      normal       0  "
             ]
           },
-          "execution_count": 19,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -326,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 5,
       "metadata": {
         "id": "OFSnqGOPb_vp"
       },
@@ -364,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -374,6 +374,14 @@
             "tf.Tensor(1, shape=(), dtype=int32)\n",
             "tf.Tensor(2, shape=(), dtype=int32)\n",
             "tf.Tensor(3, shape=(), dtype=int32)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2022-04-02 20:44:15.670219: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+            "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
           ]
         }
       ],
@@ -387,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -409,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -440,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 9,
       "metadata": {
         "id": "NXclBW3Cb_vq"
       },
@@ -457,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -478,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 11,
       "metadata": {
         "id": "GOj1-dsZb_vr"
       },
@@ -518,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 12,
       "metadata": {
         "id": "Ccngwlq_b_vr"
       },
@@ -530,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -539,7 +547,7 @@
               "<BatchDataset shapes: ({age: (None,), sex: (None,), cp: (None,), trestbps: (None,), chol: (None,), fbs: (None,), restecg: (None,), thalach: (None,), exang: (None,), oldpeak: (None,), slope: (None,), ca: (None,), thal: (None,)}, (None,)), types: ({age: tf.int64, sex: tf.int64, cp: tf.int64, trestbps: tf.int64, chol: tf.int64, fbs: tf.int64, restecg: tf.int64, thalach: tf.int64, exang: tf.int64, oldpeak: tf.float64, slope: tf.int64, ca: tf.int64, thal: tf.string}, tf.int64)>"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -606,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 14,
       "metadata": {
         "id": "cPnUDwDwb_vs"
       },
@@ -646,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -691,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 16,
       "metadata": {
         "id": "oJZ0EsPjb_vt"
       },
@@ -726,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -756,7 +764,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -812,7 +820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -841,7 +849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -861,7 +869,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 21,
       "metadata": {
         "id": "gtP52PWsb_vu"
       },
@@ -873,7 +881,7 @@
               "<IPython.core.display.Image object>"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -903,7 +911,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 22,
       "metadata": {
         "id": "T15LQ3qNb_vv"
       },
@@ -913,34 +921,34 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "8/8 [==============================] - 1s 46ms/step - loss: 0.7196 - accuracy: 0.5496 - val_loss: 0.5986 - val_accuracy: 0.7213\n",
+            "8/8 [==============================] - 1s 44ms/step - loss: 0.6657 - accuracy: 0.6074 - val_loss: 0.5825 - val_accuracy: 0.7541\n",
             "Epoch 2/10\n",
-            "8/8 [==============================] - 0s 7ms/step - loss: 0.6296 - accuracy: 0.6736 - val_loss: 0.5570 - val_accuracy: 0.7377\n",
+            "8/8 [==============================] - 0s 8ms/step - loss: 0.6388 - accuracy: 0.6364 - val_loss: 0.5376 - val_accuracy: 0.7377\n",
             "Epoch 3/10\n",
-            "8/8 [==============================] - 0s 10ms/step - loss: 0.6444 - accuracy: 0.6446 - val_loss: 0.5237 - val_accuracy: 0.7377\n",
+            "8/8 [==============================] - 0s 8ms/step - loss: 0.5744 - accuracy: 0.6942 - val_loss: 0.5040 - val_accuracy: 0.7869\n",
             "Epoch 4/10\n",
-            "8/8 [==============================] - 0s 9ms/step - loss: 0.5583 - accuracy: 0.7314 - val_loss: 0.4965 - val_accuracy: 0.7213\n",
+            "8/8 [==============================] - 0s 9ms/step - loss: 0.5240 - accuracy: 0.7521 - val_loss: 0.4780 - val_accuracy: 0.8361\n",
             "Epoch 5/10\n",
-            "8/8 [==============================] - 0s 11ms/step - loss: 0.5568 - accuracy: 0.7107 - val_loss: 0.4754 - val_accuracy: 0.7541\n",
+            "8/8 [==============================] - 0s 8ms/step - loss: 0.5264 - accuracy: 0.7190 - val_loss: 0.4582 - val_accuracy: 0.8033\n",
             "Epoch 6/10\n",
-            "8/8 [==============================] - 0s 10ms/step - loss: 0.5119 - accuracy: 0.7273 - val_loss: 0.4568 - val_accuracy: 0.7541\n",
+            "8/8 [==============================] - 0s 10ms/step - loss: 0.5205 - accuracy: 0.7521 - val_loss: 0.4435 - val_accuracy: 0.8033\n",
             "Epoch 7/10\n",
-            "8/8 [==============================] - 0s 6ms/step - loss: 0.5025 - accuracy: 0.7397 - val_loss: 0.4426 - val_accuracy: 0.7705\n",
+            "8/8 [==============================] - ETA: 0s - loss: 0.4407 - accuracy: 0.81 - 0s 6ms/step - loss: 0.4658 - accuracy: 0.8017 - val_loss: 0.4320 - val_accuracy: 0.8033\n",
             "Epoch 8/10\n",
-            "8/8 [==============================] - 0s 8ms/step - loss: 0.4728 - accuracy: 0.7686 - val_loss: 0.4301 - val_accuracy: 0.7705\n",
+            "8/8 [==============================] - 0s 13ms/step - loss: 0.4892 - accuracy: 0.7810 - val_loss: 0.4230 - val_accuracy: 0.8197\n",
             "Epoch 9/10\n",
-            "8/8 [==============================] - 0s 7ms/step - loss: 0.4678 - accuracy: 0.7893 - val_loss: 0.4204 - val_accuracy: 0.8033\n",
+            "8/8 [==============================] - 0s 12ms/step - loss: 0.4572 - accuracy: 0.7562 - val_loss: 0.4149 - val_accuracy: 0.8197\n",
             "Epoch 10/10\n",
-            "8/8 [==============================] - 0s 7ms/step - loss: 0.4850 - accuracy: 0.7107 - val_loss: 0.4118 - val_accuracy: 0.8033\n"
+            "8/8 [==============================] - 0s 11ms/step - loss: 0.4235 - accuracy: 0.8264 - val_loss: 0.4081 - val_accuracy: 0.8197\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f905f6cdfa0>"
+              "<keras.callbacks.History at 0x7fe30f6eac70>"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -976,7 +984,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 23,
       "metadata": {
         "id": "UV7e_9K2b_vw"
       },
@@ -985,7 +993,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "This particular patient had a 40.5 percent probability of having a heart disease, as evaluated by our model.\n"
+            "This particular patient had a 35.9 percent probability of having a heart disease, as evaluated by our model.\n"
           ]
         }
       ],
