--- a/_sources/docs/mnist-cnn.ipynb
+++ b/_sources/docs/mnist-cnn.ipynb
@@ -413,9 +413,7 @@
       "metadata": {},
       "source": [
         "\n",
-        "Because we’re doing 10-way classification with a softmax output, we’ll use the categorical crossentropy loss, and because our labels are integers, we’ll use the sparse version, `sparse_categorical_crossentropy`.\n",
-        "\n",
-        "We also "
+        "Because we’re doing 10-way classification with a softmax output, we’ll use the categorical crossentropy loss, and because our labels are integers, we’ll use the sparse version, `sparse_categorical_crossentropy`. "
       ]
     },
     {
