added new functions

--- a/docs/imdb-keras.ipynb
+++ b/docs/imdb-keras.ipynb
@@ -13,11 +13,27 @@
         "id": "8fLCc3qLlC2u"
       },
       "source": [
-        "*This tutorial is mainly based on [An Introduction to Keras Preprocessing Layers](https://blog.tensorflow.org/2021/11/an-introduction-to-keras-preprocessing.html) by Matthew Watson.*\n",
-        "\n",
-        "- In this tutorial we are going to use keras layers to build a simple sentiment classification model with the imdb movie review dataset. \n",
-        "\n",
-        "- The goal will be to show how preprocessing can be flexibly developed and applied."
+        "*This tutorial is based on [An Introduction to Keras Preprocessing Layers](https://blog.tensorflow.org/2021/11/an-introduction-to-keras-preprocessing.html) by Matthew Watson and [Text classification with TensorFlow Hub: Movie reviews](https://www.tensorflow.org/tutorials/keras/text_classification_with_hub) by TensorFlow.*\n",
+        " \n",
+        "- Goal: build a binary sentiment classification model with keras preprocessing\n",
+        "- Data: imdb movie review dataset. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Setup"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import tensorflow as tf\n",
+        "import tensorflow_datasets as tfds"
       ]
     },
     {
@@ -33,7 +49,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Large Movie Review Dataset. This is a dataset for binary sentiment classification containing substantially more data than previous benchmark datasets. We provide a set of 25,000 highly polar movie reviews for training, and 25,000 for testing. There is additional unlabeled data for use as well.\n"
+        "- Dataset with 50,000 polar movie reviews (positive or negative)\n",
+        "- Training data and test data each 25,000 \n",
+        "- Training and testing sets are balanced (contain an equal number of positive and negative reviews)\n",
+        "- There is additional unlabeled data for use as well"
       ]
     },
     {
@@ -47,7 +66,22 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Import tensorflow and download the training data."
+        "- Split the training set into 60% and 40% \n",
+        "  - 15,000 examples for training, \n",
+        "  - 10,000 examples for validation\n",
+        "  - 25,000 examples for testing."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_data, validation_data, test_data = tfds.load(\n",
+        "    name=\"imdb_reviews\", \n",
+        "    split=('train[:60%]', 'train[60%:]', 'test'),\n",
+        "    as_supervised=True)"
       ]
     },
     {
