--- a/docs/keras-imdb.ipynb
+++ b/docs/keras-imdb.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -50,6 +50,7 @@
         "import tensorflow_datasets as tfds\n",
         "from tensorflow.keras import layers\n",
         "from tensorflow.keras import losses\n",
+        "from keras.models import load_model\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -915,11 +916,81 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: models/imdb_model/assets\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: models/imdb_model/assets\n"
+          ]
+        }
+      ],
+      "source": [
+        "model.save('imdb_model')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Load model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
-        "model.save('imdb_model.h5')"
+        "model_new = load_model('imdb_model')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_1\"\n",
+            "__________________________________________________________________________________________________\n",
+            " Layer (type)                   Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            " input_2 (InputLayer)           [(None, 1)]          0           []                               \n",
+            "                                                                                                  \n",
+            " tf.strings.length (TFOpLambda)  (None, 1)           0           ['input_2[0][0]']                \n",
+            "                                                                                                  \n",
+            " text_vectorization (TextVector  (None, 2500)        0           ['input_2[0][0]']                \n",
+            " ization)                                                                                         \n",
+            "                                                                                                  \n",
+            " normalization (Normalization)  (None, 1)            3           ['tf.strings.length[0][0]']      \n",
+            "                                                                                                  \n",
+            " concatenate (Concatenate)      (None, 2501)         0           ['text_vectorization[0][0]',     \n",
+            "                                                                  'normalization[0][0]']          \n",
+            "                                                                                                  \n",
+            " dense_1 (Dense)                (None, 1)            2502        ['concatenate[0][0]']            \n",
+            "                                                                                                  \n",
+            "==================================================================================================\n",
+            "Total params: 2,505\n",
+            "Trainable params: 2,502\n",
+            "Non-trainable params: 3\n",
+            "__________________________________________________________________________________________________\n"
+          ]
+        }
+      ],
+      "source": [
+        "model_new.summary()"
       ]
     },
     {
