--- a/docs/keras-tuner.ipynb
+++ b/docs/keras-tuner.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
     }
    ],
    "source": [
-    "tuner.search_space_summary()\n"
+    "tuner.search_space_summary()"
    ]
   },
   {
@@ -447,6 +447,15 @@
    "source": [
     "- When search is over, you can retrieve the best model(s). \n",
     "- The model is saved at its best performing epoch evaluated on the validation_data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard"
    ]
   },
   {
