deploy: f8cb20b5d542c12ca8aff973b8447407387daa83

--- a/_sources/docs/keras-tuner.ipynb
+++ b/_sources/docs/keras-tuner.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
     }
    ],
    "source": [
-    "tuner.search_space_summary()\n"
+    "tuner.search_space_summary()"
    ]
   },
   {
@@ -450,11 +450,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- We first use TensorBoard in Visual Studio Code ([Stackoverflow](https://stackoverflow.com/a/66375514)):\n",
-    "\n",
     "\n",
     "1. Open the command palette (Ctrl/Cmd + Shift + P)\n",
     "2. Search for the command “Python: Launch TensorBoard” and press enter.\n",
