--- a/docs/structured_data_classification_from_scratch.ipynb
+++ b/docs/structured_data_classification_from_scratch.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Structured data classification\n",
         "\n",
-        "This tutorial is based on:\n",
+        "This tutorial is mainly based on:\n",
         "\n",
         "**Author:** [fchollet](https://twitter.com/fchollet)<br>\n",
         "**Date created:** 2020/06/09<br>\n",
@@ -576,6 +576,18 @@
         "- `restecg`\n",
         "- `exang`\n",
         "- `ca`\n",
+        "\n",
+        "- First, we need to decide how to represent the categorical data\n",
+        "\n",
+        "Option 1: **One-hot encoding**\n",
+        "- Example: a color feature gets a 1 in a specific index for different colors ('red' = [0, 0, 1, 0, 0])\n",
+        "\n",
+        "Option 2: **Embed the feature** \n",
+        "   - Example: each color maps to a unique trainable vector ('red' = [0.1, 0.2, 0.5, -0.2]\n",
+        "\n",
+        "Rule of thumb: \n",
+        "- Larger category spaces might do better with an embedding\n",
+        "- Smaller spaces can use one-hot encoding  \n",
         "\n",
         "We will encode these features using **one-hot encoding**. We have two options\n",
         "here:\n",
